--- a/composer.json
+++ b/composer.json
@@ -50,7 +50,8 @@
         "drupal/context": "4.0-beta2",
         "drupal/media_entity_facebook": "2.0-alpha1",
         "drupal/url_embed": "1.x-dev",
-        "drupal/advagg": "^3.4"
+        "drupal/advagg": "^3.4",
+        "drupal/focal_point": "^1.0@beta"
     },
     "repositories": [
         {
