--- a/config/sync/core.entity_form_display.media.image.default.yml
+++ b/config/sync/core.entity_form_display.media.image.default.yml
@@ -5,12 +5,13 @@ dependencies:
   config:
     - field.field.media.image.field_media_in_library
     - field.field.media.image.image
-    - image.style.thumbnail
+    - image.style.vih_class_package_accordion
     - media.type.image
   module:
-    - content_moderation
-    - image_widget_crop
+    - focal_point
+    - lightning_media
     - path
+    - workbench_moderation
 _core:
   default_config_hash: kyoAHlZTGIuGTaQuBblGBk8EhfnVKOl19_0j5WbpQqM
 id: media.image.default
@@ -26,18 +27,17 @@ content:
     third_party_settings: {  }
     region: content
   image:
-    type: image_widget_crop
+    type: image_focal_point
     weight: 0
     settings:
+      preview_image_style: vih_class_package_accordion
       progress_indicator: throbber
-      preview_image_style: thumbnail
-      crop_list:
-        - freeform
-      show_crop_area: true
-      crop_preview_image_style: crop_thumbnail
-      show_default_crop: true
-      warn_multiple_usages: false
-    third_party_settings: {  }
+      preview_link: true
+      offsets: '50,50'
+    third_party_settings:
+      lightning_media:
+        file_links: true
+        remove_button: true
     region: content
   langcode:
     type: language_select
