--- a/config/sync/core.entity_form_display.node.page.default.yml
+++ b/config/sync/core.entity_form_display.node.page.default.yml
@@ -3,13 +3,13 @@ langcode: da
 status: true
 dependencies:
   config:
-    - entity_browser.browser.image_browser
+    - entity_browser.browser.media_browser
     - field.field.node.page.body
     - field.field.node.page.field_metatag
-    - field.field.node.page.field_vih_banner
     - field.field.node.page.field_vih_course_heading
     - field.field.node.page.field_vih_course_subheading
     - field.field.node.page.field_vih_paragraphs
+    - field.field.node.page.field_vih_top_banner
     - field.field.node.page.panelizer
     - field.field.node.page.scheduled_update
     - node.type.page
@@ -44,9 +44,8 @@ third_party_settings:
         - field_vih_course_heading
         - field_vih_course_subheading
         - body
-        - field_paragraphs
       parent_name: ''
-      weight: 1
+      weight: 3
       format_type: tab
       format_settings:
         label: Indhold
@@ -69,7 +68,7 @@ third_party_settings:
         - translation
         - scheduled_update
       parent_name: ''
-      weight: 3
+      weight: 5
       format_type: tab
       format_settings:
         id: ''
@@ -107,19 +106,6 @@ content:
     third_party_settings: {  }
     type: metatag_firehose
     region: content
-  field_vih_banner:
-    type: entity_browser_file
-    weight: 30
-    settings:
-      entity_browser: image_browser
-      field_widget_remove: true
-      open: true
-      selection_mode: selection_append
-      preview_image_style: thumbnail
-      field_widget_edit: true
-      view_mode: default
-    region: content
-    third_party_settings: {  }
   field_vih_course_heading:
     weight: 2
     settings:
@@ -137,7 +123,7 @@ content:
     type: string_textfield
     region: content
   field_vih_paragraphs:
-    weight: 2
+    weight: 4
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -150,6 +136,20 @@ content:
     third_party_settings: {  }
     type: paragraphs
     region: content
+  field_vih_top_banner:
+    type: entity_browser_entity_reference
+    weight: 2
+    settings:
+      entity_browser: media_browser
+      field_widget_display: rendered_entity
+      field_widget_edit: true
+      field_widget_remove: true
+      open: true
+      selection_mode: selection_append
+      field_widget_display_settings:
+        view_mode: thumbnail
+    region: content
+    third_party_settings: {  }
   langcode:
     type: language_select
     weight: 14
