--- a/config/sync/core.entity_view_display.node.news.default.yml
+++ b/config/sync/core.entity_view_display.node.news.default.yml
@@ -5,10 +5,10 @@ dependencies:
   config:
     - field.field.node.news.body
     - field.field.node.news.field_metatag
-    - field.field.node.news.field_vih_banner
     - field.field.node.news.field_vih_image
     - field.field.node.news.field_vih_news_tags
     - field.field.node.news.field_vih_paragraphs
+    - field.field.node.news.field_vih_top_banner
     - field.field.node.news.scheduled_update
     - image.style.banner_small
     - node.type.news
@@ -44,15 +44,6 @@ content:
     third_party_settings: {  }
     type: metatag_empty_formatter
     region: content
-  field_vih_banner:
-    weight: 6
-    label: hidden
-    settings:
-      image_style: banner_small
-      image_link: ''
-    third_party_settings: {  }
-    type: image
-    region: content
   field_vih_image:
     weight: 2
     label: hidden
@@ -78,6 +69,14 @@ content:
       link: ''
     third_party_settings: {  }
     type: entity_reference_revisions_entity_view
+    region: content
+  field_vih_top_banner:
+    weight: 8
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
     region: content
   links:
     weight: 0
