--- a/config/sync/core.entity_view_display.node.page.default.yml
+++ b/config/sync/core.entity_view_display.node.page.default.yml
@@ -5,17 +5,15 @@ dependencies:
   config:
     - field.field.node.page.body
     - field.field.node.page.field_metatag
-    - field.field.node.page.field_vih_banner
     - field.field.node.page.field_vih_course_heading
     - field.field.node.page.field_vih_course_subheading
     - field.field.node.page.field_vih_paragraphs
+    - field.field.node.page.field_vih_top_banner
     - field.field.node.page.panelizer
     - field.field.node.page.scheduled_update
-    - image.style.banner_small
     - node.type.page
   module:
     - entity_reference_revisions
-    - image
     - metatag
     - panelizer
     - text
@@ -47,15 +45,6 @@ content:
     third_party_settings: {  }
     type: metatag_empty_formatter
     region: content
-  field_vih_banner:
-    weight: 6
-    label: hidden
-    settings:
-      image_style: banner_small
-      image_link: ''
-    third_party_settings: {  }
-    type: image
-    region: content
   field_vih_course_heading:
     weight: 4
     label: hidden
@@ -80,6 +69,15 @@ content:
       link: ''
     third_party_settings: {  }
     type: entity_reference_revisions_entity_view
+    region: content
+  field_vih_top_banner:
+    weight: 10
+    label: above
+    settings:
+      view_mode: default
+      link: false
+    third_party_settings: {  }
+    type: entity_reference_entity_view
     region: content
   links:
     weight: 1
