--- a/config/sync/core.entity_view_display.node.page.teaser.yml
+++ b/config/sync/core.entity_view_display.node.page.teaser.yml
@@ -6,10 +6,10 @@ dependencies:
     - core.entity_view_mode.node.teaser
     - field.field.node.page.body
     - field.field.node.page.field_metatag
-    - field.field.node.page.field_vih_banner
     - field.field.node.page.field_vih_course_heading
     - field.field.node.page.field_vih_course_subheading
     - field.field.node.page.field_vih_paragraphs
+    - field.field.node.page.field_vih_top_banner
     - field.field.node.page.panelizer
     - field.field.node.page.scheduled_update
     - node.type.page
@@ -39,10 +39,10 @@ content:
     region: content
 hidden:
   field_metatag: true
-  field_vih_banner: true
   field_vih_course_heading: true
   field_vih_course_subheading: true
   field_vih_paragraphs: true
+  field_vih_top_banner: true
   langcode: true
   panelizer: true
   scheduled_update: true
