--- a/config/sync/core.entity_view_display.node.vih_long_cource.default.yml
+++ b/config/sync/core.entity_view_display.node.vih_long_cource.default.yml
@@ -5,7 +5,6 @@ dependencies:
   config:
     - field.field.node.vih_long_cource.body
     - field.field.node.vih_long_cource.field_metatag
-    - field.field.node.vih_long_cource.field_vih_banner
     - field.field.node.vih_long_cource.field_vih_cource_contact_person
     - field.field.node.vih_long_cource.field_vih_course_heading
     - field.field.node.vih_long_cource.field_vih_course_image
@@ -17,6 +16,7 @@ dependencies:
     - field.field.node.vih_long_cource.field_vih_course_subsc_price
     - field.field.node.vih_long_cource.field_vih_course_week_price
     - field.field.node.vih_long_cource.field_vih_paragraphs
+    - field.field.node.vih_long_cource.field_vih_top_banner
     - field.field.node.vih_long_cource.scheduled_update
     - image.style.banner_small
     - node.type.vih_long_cource
@@ -247,15 +247,6 @@ content:
     third_party_settings: {  }
     type: metatag_empty_formatter
     region: content
-  field_vih_banner:
-    weight: 14
-    label: hidden
-    settings:
-      image_style: banner_small
-      image_link: ''
-    third_party_settings: {  }
-    type: image
-    region: content
   field_vih_cource_contact_person:
     weight: 7
     label: hidden
@@ -348,6 +339,14 @@ content:
       view_mode: default
       link: ''
     third_party_settings: {  }
+  field_vih_top_banner:
+    weight: 16
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
   links:
     weight: 0
     region: content
