--- a/config/sync/core.entity_view_display.user.user.default.yml
+++ b/config/sync/core.entity_view_display.user.user.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.user.user.field_vih_banner
+    - field.field.user.user.field_vih_top_banner
     - field.field.user.user.field_vih_user_birthday
     - field.field.user.user.field_vih_user_descr
     - field.field.user.user.field_vih_user_email
@@ -44,6 +45,14 @@ content:
       image_style: ''
       image_link: ''
     third_party_settings: {  }
+  field_vih_top_banner:
+    weight: 13
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
   field_vih_user_birthday:
     type: datetime_default
     weight: 6
