--- a/config/sync/image.style.banner_small.yml
+++ b/config/sync/image.style.banner_small.yml
@@ -1,14 +1,24 @@
 uuid: 309c1a72-a700-4bc0-8f9d-c18a1f13a0d6
 langcode: da
 status: true
-dependencies: {  }
+dependencies:
+  module:
+    - focal_point
 name: banner_small
 label: 'Banner - small'
 effects:
   481e2d10-f80c-4df6-a14d-7cb10226894f:
     uuid: 481e2d10-f80c-4df6-a14d-7cb10226894f
     id: image_scale_and_crop
-    weight: 1
+    weight: -9
     data:
       width: 1920
       height: 600
+  e7d8c97c-5b87-43e0-8ed5-03ab4e34fafb:
+    uuid: e7d8c97c-5b87-43e0-8ed5-03ab4e34fafb
+    id: focal_point_scale_and_crop
+    weight: -10
+    data:
+      width: 1920
+      height: 600
+      crop_type: focal_point
