VI-168 using focal point: background image (on all paragraphs)

--- a/config/sync/core.entity_form_display.paragraph.1_column_action_centered.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.1_column_action_centered.default.yml
@@ -3,9 +3,9 @@ langcode: da
 status: true
 dependencies:
   config:
-    - entity_browser.browser.image_browser
+    - entity_browser.browser.media_browser
     - field.field.paragraph.1_column_action_centered.field_vih_background_color
-    - field.field.paragraph.1_column_action_centered.field_vih_background_image
+    - field.field.paragraph.1_column_action_centered.field_vih_background_img
     - field.field.paragraph.1_column_action_centered.field_vih_description
     - field.field.paragraph.1_column_action_centered.field_vih_heading
     - field.field.paragraph.1_column_action_centered.field_vih_link
@@ -20,7 +20,7 @@ third_party_settings:
   field_group:
     group_appearance:
       children:
-        - field_vih_background_image
+        - field_vih_background_img
         - field_vih_background_color
       parent_name: ''
       weight: 5
@@ -40,21 +40,22 @@ mode: default
 content:
   field_vih_background_color:
     type: options_select
-    weight: 6
+    weight: 7
     region: content
     settings: {  }
     third_party_settings: {  }
-  field_vih_background_image:
-    type: entity_browser_file
-    weight: 5
+  field_vih_background_img:
+    type: entity_browser_entity_reference
+    weight: 6
     settings:
-      entity_browser: image_browser
+      entity_browser: media_browser
+      field_widget_display: rendered_entity
       field_widget_edit: true
       field_widget_remove: true
-      view_mode: default
-      preview_image_style: thumbnail
-      open: true
       selection_mode: selection_append
+      field_widget_display_settings:
+        view_mode: thumbnail
+      open: true
     region: content
     third_party_settings: {  }
   field_vih_description:
