--- a/config/sync/core.entity_view_display.paragraph.1_column_action_centered.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.1_column_action_centered.default.yml
@@ -4,13 +4,12 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.1_column_action_centered.field_vih_background_color
-    - field.field.paragraph.1_column_action_centered.field_vih_background_image
+    - field.field.paragraph.1_column_action_centered.field_vih_background_img
     - field.field.paragraph.1_column_action_centered.field_vih_description
     - field.field.paragraph.1_column_action_centered.field_vih_heading
     - field.field.paragraph.1_column_action_centered.field_vih_link
     - paragraphs.paragraphs_type.1_column_action_centered
   module:
-    - image
     - link
     - text
 id: paragraph.1_column_action_centered.default
@@ -18,15 +17,14 @@ targetEntityType: paragraph
 bundle: 1_column_action_centered
 mode: default
 content:
-  field_vih_background_image:
-    type: image
-    weight: 4
-    region: content
+  field_vih_background_img:
+    weight: 5
     label: above
     settings:
-      image_style: ''
-      image_link: ''
+      link: true
     third_party_settings: {  }
+    type: entity_reference_label
+    region: content
   field_vih_description:
     weight: 2
     label: hidden
