--- a/config/sync/core.entity_form_display.paragraph.gallery.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.gallery.default.yml
@@ -4,8 +4,9 @@ status: true
 dependencies:
   config:
     - entity_browser.browser.image_browser
+    - entity_browser.browser.media_browser
     - field.field.paragraph.gallery.field_vih_background_color
-    - field.field.paragraph.gallery.field_vih_background_image
+    - field.field.paragraph.gallery.field_vih_background_img
     - field.field.paragraph.gallery.field_vih_heading
     - field.field.paragraph.gallery.field_vih_images
     - field.field.paragraph.gallery.field_vih_link
@@ -19,7 +20,7 @@ third_party_settings:
   field_group:
     group_appearance:
       children:
-        - field_vih_background_image
+        - field_vih_background_img
         - field_vih_background_color
       parent_name: ''
       weight: 4
@@ -38,22 +39,23 @@ bundle: gallery
 mode: default
 content:
   field_vih_background_color:
-    weight: 3
+    weight: 7
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
-  field_vih_background_image:
-    type: entity_browser_file
-    weight: 2
+  field_vih_background_img:
+    type: entity_browser_entity_reference
+    weight: 6
     settings:
-      entity_browser: image_browser
-      field_widget_remove: true
-      open: true
-      selection_mode: selection_append
-      preview_image_style: thumbnail
+      entity_browser: media_browser
+      field_widget_display: rendered_entity
       field_widget_edit: true
-      view_mode: default
+      field_widget_remove: true
+      selection_mode: selection_append
+      field_widget_display_settings:
+        view_mode: thumbnail
+      open: true
     region: content
     third_party_settings: {  }
   field_vih_heading:
