--- a/config/sync/core.entity_form_display.paragraph.social_media_embed.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.social_media_embed.default.yml
@@ -3,10 +3,10 @@ langcode: da
 status: true
 dependencies:
   config:
-    - entity_browser.browser.image_browser
+    - entity_browser.browser.media_browser
     - field.field.paragraph.social_media_embed.field_instagram_oembed_url
     - field.field.paragraph.social_media_embed.field_vih_background_color
-    - field.field.paragraph.social_media_embed.field_vih_background_image
+    - field.field.paragraph.social_media_embed.field_vih_background_img
     - field.field.paragraph.social_media_embed.field_vih_embed
     - field.field.paragraph.social_media_embed.field_vih_heading
     - field.field.paragraph.social_media_embed.field_vih_link
@@ -20,8 +20,8 @@ third_party_settings:
   field_group:
     group_appearance:
       children:
+        - field_vih_background_img
         - field_vih_background_color
-        - field_vih_background_image
       parent_name: ''
       weight: 4
       format_type: tab
@@ -47,22 +47,23 @@ content:
     type: link_default
     region: content
   field_vih_background_color:
-    weight: 3
+    weight: 7
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
-  field_vih_background_image:
-    type: entity_browser_file
-    weight: 5
+  field_vih_background_img:
+    type: entity_browser_entity_reference
+    weight: 6
     settings:
-      entity_browser: image_browser
-      field_widget_remove: true
-      open: true
-      selection_mode: selection_append
-      preview_image_style: thumbnail
+      entity_browser: media_browser
+      field_widget_display: rendered_entity
       field_widget_edit: true
-      view_mode: default
+      field_widget_remove: true
+      selection_mode: selection_append
+      field_widget_display_settings:
+        view_mode: thumbnail
+      open: true
     region: content
     third_party_settings: {  }
   field_vih_embed:
