--- a/config/sync/core.entity_form_display.paragraph.user_quote.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.user_quote.default.yml
@@ -4,9 +4,10 @@ status: true
 dependencies:
   config:
     - entity_browser.browser.image_browser
+    - entity_browser.browser.media_browser
     - field.field.paragraph.user_quote.field_vih_author
     - field.field.paragraph.user_quote.field_vih_background_color
-    - field.field.paragraph.user_quote.field_vih_background_image
+    - field.field.paragraph.user_quote.field_vih_background_img
     - field.field.paragraph.user_quote.field_vih_heading
     - field.field.paragraph.user_quote.field_vih_link
     - field.field.paragraph.user_quote.field_vih_person_photo
@@ -22,8 +23,8 @@ third_party_settings:
   field_group:
     group_appearance:
       children:
+        - field_vih_background_img
         - field_vih_background_color
-        - field_vih_background_image
       parent_name: ''
       weight: 6
       format_type: tab
@@ -49,22 +50,23 @@ content:
       placeholder: ''
     third_party_settings: {  }
   field_vih_background_color:
-    weight: 6
+    weight: 10
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
-  field_vih_background_image:
-    type: entity_browser_file
-    weight: 8
+  field_vih_background_img:
+    type: entity_browser_entity_reference
+    weight: 9
     settings:
-      entity_browser: image_browser
-      field_widget_remove: true
-      open: true
-      selection_mode: selection_append
-      preview_image_style: thumbnail
+      entity_browser: media_browser
+      field_widget_display: rendered_entity
       field_widget_edit: true
-      view_mode: default
+      field_widget_remove: true
+      selection_mode: selection_append
+      field_widget_display_settings:
+        view_mode: thumbnail
+      open: true
     region: content
     third_party_settings: {  }
   field_vih_heading:
