--- a/config/sync/core.entity_form_display.paragraph.vih_webform.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.vih_webform.default.yml
@@ -3,9 +3,9 @@ langcode: da
 status: true
 dependencies:
   config:
-    - entity_browser.browser.image_browser
+    - entity_browser.browser.media_browser
     - field.field.paragraph.vih_webform.field_vih_background_color
-    - field.field.paragraph.vih_webform.field_vih_background_image
+    - field.field.paragraph.vih_webform.field_vih_background_img
     - field.field.paragraph.vih_webform.field_vih_heading
     - field.field.paragraph.vih_webform.field_vih_webform
     - paragraphs.paragraphs_type.vih_webform
@@ -19,22 +19,23 @@ bundle: vih_webform
 mode: default
 content:
   field_vih_background_color:
-    weight: 4
+    weight: 3
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
-  field_vih_background_image:
-    type: entity_browser_file
-    weight: 3
+  field_vih_background_img:
+    type: entity_browser_entity_reference
+    weight: 2
     settings:
-      entity_browser: image_browser
-      field_widget_remove: true
-      open: true
-      selection_mode: selection_append
-      preview_image_style: thumbnail
+      entity_browser: media_browser
+      field_widget_display: rendered_entity
       field_widget_edit: true
-      view_mode: default
+      field_widget_remove: true
+      selection_mode: selection_append
+      field_widget_display_settings:
+        view_mode: thumbnail
+      open: true
     region: content
     third_party_settings: {  }
   field_vih_heading:
