--- a/config/sync/core.entity_view_display.paragraph.article.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.article.default.yml
@@ -4,13 +4,12 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.article.field_vih_background_color
-    - field.field.paragraph.article.field_vih_background_image
+    - field.field.paragraph.article.field_vih_background_img
     - field.field.paragraph.article.field_vih_heading
     - field.field.paragraph.article.field_vih_link
     - field.field.paragraph.article.field_vih_paragraphs_body
     - paragraphs.paragraphs_type.article
   module:
-    - image
     - link
     - options
     - text
@@ -26,14 +25,13 @@ content:
     third_party_settings: {  }
     type: list_default
     region: content
-  field_vih_background_image:
-    weight: 5
+  field_vih_background_img:
+    weight: 6
     label: above
     settings:
-      image_style: ''
-      image_link: ''
+      link: true
     third_party_settings: {  }
-    type: image
+    type: entity_reference_label
     region: content
   field_vih_heading:
     weight: 0
