--- a/config/sync/core.entity_view_display.paragraph.class_packages.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.class_packages.default.yml
@@ -4,14 +4,12 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.class_packages.field_vih_background_color
-    - field.field.paragraph.class_packages.field_vih_background_image
+    - field.field.paragraph.class_packages.field_vih_background_img
     - field.field.paragraph.class_packages.field_vih_class_id
     - field.field.paragraph.class_packages.field_vih_heading
     - field.field.paragraph.class_packages.field_vih_link
-    - image.style.paragraph_background_image
     - paragraphs.paragraphs_type.class_packages
   module:
-    - image
     - link
     - options
 id: paragraph.class_packages.default
@@ -26,14 +24,13 @@ content:
     third_party_settings: {  }
     type: list_default
     region: content
-  field_vih_background_image:
-    weight: 2
-    label: hidden
+  field_vih_background_img:
+    weight: 5
+    label: above
     settings:
-      image_style: paragraph_background_image
-      image_link: ''
+      link: true
     third_party_settings: {  }
-    type: image
+    type: entity_reference_label
     region: content
   field_vih_heading:
     weight: 0
