--- a/config/sync/core.entity_view_display.paragraph.employee.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.employee.default.yml
@@ -4,13 +4,12 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.employee.field_vih_background_color
-    - field.field.paragraph.employee.field_vih_background_image
+    - field.field.paragraph.employee.field_vih_background_img
     - field.field.paragraph.employee.field_vih_heading
     - field.field.paragraph.employee.field_vih_link
     - field.field.paragraph.employee.field_vih_user_type_id
     - paragraphs.paragraphs_type.employee
   module:
-    - image
     - link
     - options
 id: paragraph.employee.default
@@ -25,14 +24,13 @@ content:
     third_party_settings: {  }
     type: list_default
     region: content
-  field_vih_background_image:
-    weight: 3
+  field_vih_background_img:
+    weight: 4
     label: above
     settings:
-      image_style: ''
-      image_link: ''
+      link: true
     third_party_settings: {  }
-    type: image
+    type: entity_reference_label
     region: content
   field_vih_heading:
     weight: 0
