--- a/config/sync/core.entity_view_display.paragraph.file.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.file.default.yml
@@ -4,7 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.file.field_vih_background_color
-    - field.field.paragraph.file.field_vih_background_image
+    - field.field.paragraph.file.field_vih_background_img
     - field.field.paragraph.file.field_vih_description
     - field.field.paragraph.file.field_vih_heading
     - field.field.paragraph.file.field_vih_link
@@ -12,7 +12,6 @@ dependencies:
     - paragraphs.paragraphs_type.file
   module:
     - file
-    - image
     - link
     - options
     - text
@@ -28,14 +27,13 @@ content:
     third_party_settings: {  }
     type: list_default
     region: content
-  field_vih_background_image:
-    weight: 6
+  field_vih_background_img:
+    weight: 7
     label: above
     settings:
-      image_style: ''
-      image_link: ''
+      link: true
     third_party_settings: {  }
-    type: image
+    type: entity_reference_label
     region: content
   field_vih_description:
     weight: 2
