--- a/config/sync/core.entity_view_display.paragraph.list_of_news_teasers.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.list_of_news_teasers.default.yml
@@ -4,12 +4,11 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.list_of_news_teasers.field_vih_background_color
-    - field.field.paragraph.list_of_news_teasers.field_vih_background_image
+    - field.field.paragraph.list_of_news_teasers.field_vih_background_img
     - field.field.paragraph.list_of_news_teasers.field_vih_heading
     - field.field.paragraph.list_of_news_teasers.field_vih_tags
     - paragraphs.paragraphs_type.list_of_news_teasers
   module:
-    - image
     - options
 id: paragraph.list_of_news_teasers.default
 targetEntityType: paragraph
@@ -23,14 +22,13 @@ content:
     third_party_settings: {  }
     type: list_default
     region: content
-  field_vih_background_image:
-    weight: 2
+  field_vih_background_img:
+    weight: 3
     label: above
     settings:
-      image_style: ''
-      image_link: ''
+      link: true
     third_party_settings: {  }
-    type: image
+    type: entity_reference_label
     region: content
   field_vih_heading:
     weight: 0
