--- a/config/sync/core.entity_view_display.paragraph.social_media_embed.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.social_media_embed.default.yml
@@ -5,7 +5,7 @@ dependencies:
   config:
     - field.field.paragraph.social_media_embed.field_instagram_oembed_url
     - field.field.paragraph.social_media_embed.field_vih_background_color
-    - field.field.paragraph.social_media_embed.field_vih_background_image
+    - field.field.paragraph.social_media_embed.field_vih_background_img
     - field.field.paragraph.social_media_embed.field_vih_embed
     - field.field.paragraph.social_media_embed.field_vih_heading
     - field.field.paragraph.social_media_embed.field_vih_link
@@ -27,6 +27,14 @@ content:
       hidecaption: false
     third_party_settings: {  }
     type: instagram_embed
+    region: content
+  field_vih_background_img:
+    weight: 4
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
     region: content
   field_vih_embed:
     type: url_embed
@@ -57,4 +65,3 @@ content:
     region: content
 hidden:
   field_vih_background_color: true
-  field_vih_background_image: true
