--- a/config/sync/core.entity_view_display.paragraph.user_quote.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.user_quote.default.yml
@@ -5,7 +5,7 @@ dependencies:
   config:
     - field.field.paragraph.user_quote.field_vih_author
     - field.field.paragraph.user_quote.field_vih_background_color
-    - field.field.paragraph.user_quote.field_vih_background_image
+    - field.field.paragraph.user_quote.field_vih_background_img
     - field.field.paragraph.user_quote.field_vih_heading
     - field.field.paragraph.user_quote.field_vih_link
     - field.field.paragraph.user_quote.field_vih_person_photo
@@ -37,14 +37,13 @@ content:
     third_party_settings: {  }
     type: list_default
     region: content
-  field_vih_background_image:
-    weight: 7
+  field_vih_background_img:
+    weight: 8
     label: above
     settings:
-      image_style: ''
-      image_link: ''
+      link: true
     third_party_settings: {  }
-    type: image
+    type: entity_reference_label
     region: content
   field_vih_heading:
     weight: 0
