--- a/config/sync/core.entity_view_display.paragraph.vih_class_groups_accordion.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.vih_class_groups_accordion.default.yml
@@ -4,14 +4,13 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.vih_class_groups_accordion.field_vih_background_color
-    - field.field.paragraph.vih_class_groups_accordion.field_vih_background_image
+    - field.field.paragraph.vih_class_groups_accordion.field_vih_background_img
     - field.field.paragraph.vih_class_groups_accordion.field_vih_cg_single_class_groups
     - field.field.paragraph.vih_class_groups_accordion.field_vih_heading
     - field.field.paragraph.vih_class_groups_accordion.field_vih_link
     - paragraphs.paragraphs_type.vih_class_groups_accordion
   module:
     - entity_reference_revisions
-    - image
     - link
     - options
 id: paragraph.vih_class_groups_accordion.default
@@ -26,14 +25,13 @@ content:
     third_party_settings: {  }
     type: list_default
     region: content
-  field_vih_background_image:
-    weight: 4
+  field_vih_background_img:
+    weight: 5
     label: above
     settings:
-      image_style: ''
-      image_link: ''
+      link: true
     third_party_settings: {  }
-    type: image
+    type: entity_reference_label
     region: content
   field_vih_cg_single_class_groups:
     type: entity_reference_revisions_entity_view
