--- a/config/sync/core.entity_view_display.paragraph.vih_teacher_class_description.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.vih_teacher_class_description.default.yml
@@ -4,7 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.vih_teacher_class_description.field_vih_background_color
-    - field.field.paragraph.vih_teacher_class_description.field_vih_background_image
+    - field.field.paragraph.vih_teacher_class_description.field_vih_background_img
     - field.field.paragraph.vih_teacher_class_description.field_vih_description
     - field.field.paragraph.vih_teacher_class_description.field_vih_heading
     - field.field.paragraph.vih_teacher_class_description.field_vih_photo
@@ -19,6 +19,14 @@ targetEntityType: paragraph
 bundle: vih_teacher_class_description
 mode: default
 content:
+  field_vih_background_img:
+    weight: 3
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
   field_vih_description:
     type: text_default
     weight: 2
@@ -45,5 +53,4 @@ content:
     third_party_settings: {  }
 hidden:
   field_vih_background_color: true
-  field_vih_background_image: true
   field_vih_user: true
