--- a/config/sync/core.entity_view_display.paragraph.vih_webform.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.vih_webform.default.yml
@@ -4,13 +4,11 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.vih_webform.field_vih_background_color
-    - field.field.paragraph.vih_webform.field_vih_background_image
+    - field.field.paragraph.vih_webform.field_vih_background_img
     - field.field.paragraph.vih_webform.field_vih_heading
     - field.field.paragraph.vih_webform.field_vih_webform
-    - image.style.paragraph_background_image
     - paragraphs.paragraphs_type.vih_webform
   module:
-    - image
     - options
     - webform
 id: paragraph.vih_webform.default
@@ -25,14 +23,13 @@ content:
     third_party_settings: {  }
     type: list_default
     region: content
-  field_vih_background_image:
-    weight: 2
-    label: hidden
+  field_vih_background_img:
+    weight: 5
+    label: above
     settings:
-      image_style: paragraph_background_image
-      image_link: ''
+      link: true
     third_party_settings: {  }
-    type: image
+    type: entity_reference_label
     region: content
   field_vih_heading:
     weight: 0
