--- a/config/sync/core.entity_view_display.paragraph.employee.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.employee.default.yml
@@ -11,27 +11,11 @@ dependencies:
     - paragraphs.paragraphs_type.employee
   module:
     - link
-    - options
 id: paragraph.employee.default
 targetEntityType: paragraph
 bundle: employee
 mode: default
 content:
-  field_vih_background_color:
-    weight: 2
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    type: list_default
-    region: content
-  field_vih_background_img:
-    weight: 4
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
   field_vih_heading:
     weight: 0
     label: hidden
@@ -53,4 +37,6 @@ content:
     type: link
     region: content
 hidden:
+  field_vih_background_color: true
+  field_vih_background_img: true
   field_vih_user_type_id: true
