--- a/config/sync/core.entity_view_display.paragraph.1_column_action_centered.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.1_column_action_centered.default.yml
@@ -17,16 +17,8 @@ targetEntityType: paragraph
 bundle: 1_column_action_centered
 mode: default
 content:
-  field_vih_background_img:
-    weight: 5
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
   field_vih_description:
-    weight: 2
+    weight: 1
     label: hidden
     settings: {  }
     third_party_settings: {  }
@@ -41,7 +33,7 @@ content:
       link_to_entity: false
     third_party_settings: {  }
   field_vih_link:
-    weight: 3
+    weight: 2
     label: hidden
     settings:
       trim_length: null
@@ -55,4 +47,5 @@ content:
 hidden:
   created: true
   field_vih_background_color: true
+  field_vih_background_img: true
   uid: true
