--- a/config/sync/core.entity_view_display.paragraph.class_packages.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.class_packages.default.yml
@@ -11,27 +11,11 @@ dependencies:
     - paragraphs.paragraphs_type.class_packages
   module:
     - link
-    - options
 id: paragraph.class_packages.default
 targetEntityType: paragraph
 bundle: class_packages
 mode: default
 content:
-  field_vih_background_color:
-    weight: 4
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    type: list_default
-    region: content
-  field_vih_background_img:
-    weight: 5
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
   field_vih_heading:
     weight: 0
     label: hidden
@@ -41,7 +25,7 @@ content:
     type: string
     region: content
   field_vih_link:
-    weight: 3
+    weight: 1
     label: hidden
     settings:
       trim_length: 80
@@ -53,4 +37,6 @@ content:
     type: link
     region: content
 hidden:
+  field_vih_background_color: true
+  field_vih_background_img: true
   field_vih_class_id: true
