--- a/config/sync/core.entity_view_display.paragraph.file.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.file.default.yml
@@ -13,30 +13,14 @@ dependencies:
   module:
     - file
     - link
-    - options
     - text
 id: paragraph.file.default
 targetEntityType: paragraph
 bundle: file
 mode: default
 content:
-  field_vih_background_color:
-    weight: 5
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    type: list_default
-    region: content
-  field_vih_background_img:
-    weight: 7
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
   field_vih_description:
-    weight: 2
+    weight: 1
     label: hidden
     settings: {  }
     third_party_settings: {  }
@@ -51,7 +35,7 @@ content:
     type: string
     region: content
   field_vih_link:
-    weight: 4
+    weight: 3
     label: hidden
     settings:
       trim_length: null
@@ -64,9 +48,11 @@ content:
     region: content
   file:
     type: file_default
-    weight: 3
+    weight: 2
     region: content
     label: hidden
     settings: {  }
     third_party_settings: {  }
-hidden: {  }
+hidden:
+  field_vih_background_color: true
+  field_vih_background_img: true
