--- a/config/sync/core.entity_view_display.paragraph.gallery.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.gallery.default.yml
@@ -11,28 +11,12 @@ dependencies:
     - paragraphs.paragraphs_type.gallery
   module:
     - link
-    - options
     - photoswipe
 id: paragraph.gallery.default
 targetEntityType: paragraph
 bundle: gallery
 mode: default
 content:
-  field_vih_background_color:
-    weight: 4
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    type: list_default
-    region: content
-  field_vih_background_img:
-    weight: 6
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
   field_vih_heading:
     weight: 0
     label: hidden
@@ -43,7 +27,7 @@ content:
     region: content
   field_vih_images:
     type: photoswipe_field_formatter
-    weight: 2
+    weight: 1
     region: content
     label: hidden
     settings:
@@ -53,7 +37,7 @@ content:
       photoswipe_view_mode: default
     third_party_settings: {  }
   field_vih_link:
-    weight: 3
+    weight: 2
     label: hidden
     settings:
       trim_length: null
@@ -64,4 +48,6 @@ content:
     third_party_settings: {  }
     type: link
     region: content
-hidden: {  }
+hidden:
+  field_vih_background_color: true
+  field_vih_background_img: true
