--- a/config/sync/core.entity_view_display.paragraph.list_of_news_teasers.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.list_of_news_teasers.default.yml
@@ -8,28 +8,11 @@ dependencies:
     - field.field.paragraph.list_of_news_teasers.field_vih_heading
     - field.field.paragraph.list_of_news_teasers.field_vih_tags
     - paragraphs.paragraphs_type.list_of_news_teasers
-  module:
-    - options
 id: paragraph.list_of_news_teasers.default
 targetEntityType: paragraph
 bundle: list_of_news_teasers
 mode: default
 content:
-  field_vih_background_color:
-    weight: 1
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    type: list_default
-    region: content
-  field_vih_background_img:
-    weight: 3
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
   field_vih_heading:
     weight: 0
     label: hidden
@@ -39,4 +22,6 @@ content:
     type: string
     region: content
 hidden:
+  field_vih_background_color: true
+  field_vih_background_img: true
   field_vih_tags: true
