--- a/config/sync/core.entity_view_display.paragraph.long_course_list_.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.long_course_list_.default.yml
@@ -11,29 +11,13 @@ dependencies:
     - paragraphs.paragraphs_type.long_course_list_
   module:
     - link
-    - options
 id: paragraph.long_course_list_.default
 targetEntityType: paragraph
 bundle: long_course_list_
 mode: default
 content:
-  field_vih_background_color:
-    weight: 2
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    type: list_default
-    region: content
-  field_vih_background_img:
-    weight: 5
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
   field_vih_course_id:
-    weight: 4
+    weight: 2
     label: above
     settings:
       link: true
@@ -60,4 +44,6 @@ content:
     third_party_settings: {  }
     type: link
     region: content
-hidden: {  }
+hidden:
+  field_vih_background_color: true
+  field_vih_background_img: true
