--- a/config/sync/core.entity_view_display.paragraph.short_course_list_.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.short_course_list_.default.yml
@@ -11,27 +11,11 @@ dependencies:
     - paragraphs.paragraphs_type.short_course_list_
   module:
     - link
-    - options
 id: paragraph.short_course_list_.default
 targetEntityType: paragraph
 bundle: short_course_list_
 mode: default
 content:
-  field_vih_background_color:
-    weight: 2
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    type: list_default
-    region: content
-  field_vih_background_img:
-    weight: 4
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
   field_vih_heading:
     weight: 0
     label: hidden
@@ -53,4 +37,6 @@ content:
     type: link
     region: content
 hidden:
+  field_vih_background_color: true
+  field_vih_background_img: true
   field_vih_course_id: true
