--- a/config/sync/core.entity_view_display.paragraph.social_media_embed.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.social_media_embed.default.yml
@@ -28,14 +28,6 @@ content:
     third_party_settings: {  }
     type: instagram_embed
     region: content
-  field_vih_background_img:
-    weight: 4
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
   field_vih_embed:
     type: url_embed
     weight: 1
@@ -65,3 +57,4 @@ content:
     region: content
 hidden:
   field_vih_background_color: true
+  field_vih_background_img: true
