--- a/config/sync/core.entity_view_display.paragraph.user_quote.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.user_quote.default.yml
@@ -15,7 +15,6 @@ dependencies:
   module:
     - image
     - link
-    - options
     - text
 id: paragraph.user_quote.default
 targetEntityType: paragraph
@@ -24,27 +23,12 @@ mode: default
 content:
   field_vih_author:
     type: string
-    weight: 5
+    weight: 4
     region: content
     label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
-  field_vih_background_color:
-    weight: 6
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    type: list_default
-    region: content
-  field_vih_background_img:
-    weight: 8
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
   field_vih_heading:
     weight: 0
     label: hidden
@@ -54,7 +38,7 @@ content:
     type: string
     region: content
   field_vih_link:
-    weight: 4
+    weight: 3
     label: hidden
     settings:
       trim_length: null
@@ -76,9 +60,11 @@ content:
     third_party_settings: {  }
   field_vih_text:
     type: text_default
-    weight: 3
+    weight: 2
     region: content
     label: hidden
     settings: {  }
     third_party_settings: {  }
-hidden: {  }
+hidden:
+  field_vih_background_color: true
+  field_vih_background_img: true
