--- a/config/sync/core.entity_view_display.paragraph.video.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.video.default.yml
@@ -11,7 +11,6 @@ dependencies:
     - field.field.paragraph.video.field_vih_video
     - paragraphs.paragraphs_type.video
   module:
-    - options
     - text
     - video_embed_field
 id: paragraph.video.default
@@ -19,21 +18,6 @@ targetEntityType: paragraph
 bundle: video
 mode: default
 content:
-  field_vih_background_color:
-    weight: 5
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    type: list_default
-    region: content
-  field_vih_background_img:
-    weight: 7
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
   field_vih_description:
     weight: 1
     label: hidden
@@ -58,7 +42,7 @@ content:
     third_party_settings: {  }
   field_vih_video:
     type: video_embed_field_video
-    weight: 4
+    weight: 3
     region: content
     label: hidden
     settings:
@@ -67,4 +51,6 @@ content:
       height: 480
       autoplay: false
     third_party_settings: {  }
-hidden: {  }
+hidden:
+  field_vih_background_color: true
+  field_vih_background_img: true
