--- a/config/sync/core.entity_view_display.paragraph.vih_class_groups_accordion.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.vih_class_groups_accordion.default.yml
@@ -12,27 +12,11 @@ dependencies:
   module:
     - entity_reference_revisions
     - link
-    - options
 id: paragraph.vih_class_groups_accordion.default
 targetEntityType: paragraph
 bundle: vih_class_groups_accordion
 mode: default
 content:
-  field_vih_background_color:
-    weight: 3
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    type: list_default
-    region: content
-  field_vih_background_img:
-    weight: 5
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
   field_vih_cg_single_class_groups:
     type: entity_reference_revisions_entity_view
     weight: 1
@@ -62,4 +46,6 @@ content:
     third_party_settings: {  }
     type: link
     region: content
-hidden: {  }
+hidden:
+  field_vih_background_color: true
+  field_vih_background_img: true
