--- a/config/sync/core.entity_view_display.paragraph.vih_teacher_class_description.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.vih_teacher_class_description.default.yml
@@ -19,14 +19,6 @@ targetEntityType: paragraph
 bundle: vih_teacher_class_description
 mode: default
 content:
-  field_vih_background_img:
-    weight: 3
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
   field_vih_description:
     type: text_default
     weight: 2
@@ -53,4 +45,5 @@ content:
     third_party_settings: {  }
 hidden:
   field_vih_background_color: true
+  field_vih_background_img: true
   field_vih_user: true
