--- a/config/sync/core.entity_view_display.paragraph.vih_webform.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.vih_webform.default.yml
@@ -9,28 +9,12 @@ dependencies:
     - field.field.paragraph.vih_webform.field_vih_webform
     - paragraphs.paragraphs_type.vih_webform
   module:
-    - options
     - webform
 id: paragraph.vih_webform.default
 targetEntityType: paragraph
 bundle: vih_webform
 mode: default
 content:
-  field_vih_background_color:
-    weight: 3
-    label: hidden
-    settings: {  }
-    third_party_settings: {  }
-    type: list_default
-    region: content
-  field_vih_background_img:
-    weight: 5
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
   field_vih_heading:
     weight: 0
     label: hidden
@@ -41,10 +25,12 @@ content:
     region: content
   field_vih_webform:
     type: webform_entity_reference_entity_view
-    weight: 4
+    weight: 1
     region: content
     label: hidden
     settings:
       source_entity: true
     third_party_settings: {  }
-hidden: {  }
+hidden:
+  field_vih_background_color: true
+  field_vih_background_img: true
