--- a/config/sync/core.entity_view_display.taxonomy_term.vih_class.radio_selection.yml
+++ b/config/sync/core.entity_view_display.taxonomy_term.vih_class.radio_selection.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.taxonomy_term.radio_selection
     - field.field.taxonomy_term.vih_class.field_metatag
+    - field.field.taxonomy_term.vih_class.field_short_description
     - field.field.taxonomy_term.vih_class.field_vih_banner
     - field.field.taxonomy_term.vih_class.field_vih_class_class_packages
     - field.field.taxonomy_term.vih_class.field_vih_class_color
@@ -14,12 +15,12 @@ dependencies:
     - field.field.taxonomy_term.vih_class.field_vih_heading
     - field.field.taxonomy_term.vih_class.field_vih_paragraphs
     - field.field.taxonomy_term.vih_class.field_vih_subheading
+    - field.field.taxonomy_term.vih_class.field_vih_top_banner
     - image.style.vih_class_teaser
     - taxonomy.vocabulary.vih_class
   module:
     - image
     - panelizer
-    - text
 third_party_settings:
   panelizer:
     enable: false
@@ -31,14 +32,13 @@ targetEntityType: taxonomy_term
 bundle: vih_class
 mode: radio_selection
 content:
-  description:
-    type: text_trimmed
+  field_short_description:
+    type: basic_string
     weight: 1
-    label: hidden
-    settings:
-      trim_length: 100
-    third_party_settings: {  }
     region: content
+    label: hidden
+    settings: {  }
+    third_party_settings: {  }
   field_vih_class_image:
     type: image
     weight: 0
@@ -49,6 +49,7 @@ content:
     third_party_settings: {  }
     region: content
 hidden:
+  description: true
   field_metatag: true
   field_vih_banner: true
   field_vih_class_class_packages: true
@@ -58,4 +59,5 @@ hidden:
   field_vih_heading: true
   field_vih_paragraphs: true
   field_vih_subheading: true
+  field_vih_top_banner: true
   langcode: true
