--- a/config/sync/core.entity_view_display.taxonomy_term.vih_class.vih_class_table_teaser.yml
+++ b/config/sync/core.entity_view_display.taxonomy_term.vih_class.vih_class_table_teaser.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.taxonomy_term.vih_class_table_teaser
     - field.field.taxonomy_term.vih_class.field_metatag
+    - field.field.taxonomy_term.vih_class.field_short_description
     - field.field.taxonomy_term.vih_class.field_vih_banner
     - field.field.taxonomy_term.vih_class.field_vih_class_class_packages
     - field.field.taxonomy_term.vih_class.field_vih_class_color
@@ -14,24 +15,30 @@ dependencies:
     - field.field.taxonomy_term.vih_class.field_vih_heading
     - field.field.taxonomy_term.vih_class.field_vih_paragraphs
     - field.field.taxonomy_term.vih_class.field_vih_subheading
+    - field.field.taxonomy_term.vih_class.field_vih_top_banner
     - image.style.vih_class_teaser
     - taxonomy.vocabulary.vih_class
   module:
     - image
-    - text
+    - panelizer
+third_party_settings:
+  panelizer:
+    enable: false
+    custom: false
+    allow: false
+    default: default
 id: taxonomy_term.vih_class.vih_class_table_teaser
 targetEntityType: taxonomy_term
 bundle: vih_class
 mode: vih_class_table_teaser
 content:
-  description:
-    label: hidden
-    type: text_trimmed
+  field_short_description:
+    type: basic_string
     weight: 1
-    settings:
-      trim_length: 150
-    third_party_settings: {  }
     region: content
+    label: hidden
+    settings: {  }
+    third_party_settings: {  }
   field_vih_class_image:
     type: image
     weight: 0
@@ -42,6 +49,7 @@ content:
     third_party_settings: {  }
     region: content
 hidden:
+  description: true
   field_metatag: true
   field_vih_banner: true
   field_vih_class_class_packages: true
@@ -51,4 +59,5 @@ hidden:
   field_vih_heading: true
   field_vih_paragraphs: true
   field_vih_subheading: true
+  field_vih_top_banner: true
   langcode: true
