--- a/config/sync/core.entity_form_display.taxonomy_term.vih_class.default.yml
+++ b/config/sync/core.entity_form_display.taxonomy_term.vih_class.default.yml
@@ -116,12 +116,12 @@ content:
     type: metatag_firehose
     region: content
   field_short_description:
-    weight: 7
+    weight: 22
     settings:
       rows: 5
       placeholder: ''
     third_party_settings: {  }
-    type: text_textarea
+    type: string_textarea
     region: content
   field_vih_banner:
     type: entity_browser_file
