--- a/config/sync/core.entity_view_display.taxonomy_term.vih_class.list_advanced.yml
+++ b/config/sync/core.entity_view_display.taxonomy_term.vih_class.list_advanced.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.taxonomy_term.list_advanced
     - field.field.taxonomy_term.vih_class.field_metatag
+    - field.field.taxonomy_term.vih_class.field_short_description
     - field.field.taxonomy_term.vih_class.field_vih_banner
     - field.field.taxonomy_term.vih_class.field_vih_class_class_packages
     - field.field.taxonomy_term.vih_class.field_vih_class_color
@@ -14,13 +15,13 @@ dependencies:
     - field.field.taxonomy_term.vih_class.field_vih_heading
     - field.field.taxonomy_term.vih_class.field_vih_paragraphs
     - field.field.taxonomy_term.vih_class.field_vih_subheading
+    - field.field.taxonomy_term.vih_class.field_vih_top_banner
     - image.style.list_advanced
     - taxonomy.vocabulary.vih_class
   module:
     - image
     - options
     - panelizer
-    - text
 third_party_settings:
   panelizer:
     enable: false
@@ -32,14 +33,13 @@ targetEntityType: taxonomy_term
 bundle: vih_class
 mode: list_advanced
 content:
-  description:
-    label: hidden
-    type: text_trimmed
+  field_short_description:
+    type: basic_string
     weight: 1
-    settings:
-      trim_length: 120
-    third_party_settings: {  }
     region: content
+    label: hidden
+    settings: {  }
+    third_party_settings: {  }
   field_vih_class_color:
     type: list_key
     weight: 2
@@ -57,6 +57,7 @@ content:
       image_link: ''
     third_party_settings: {  }
 hidden:
+  description: true
   field_metatag: true
   field_vih_banner: true
   field_vih_class_class_packages: true
@@ -65,4 +66,5 @@ hidden:
   field_vih_heading: true
   field_vih_paragraphs: true
   field_vih_subheading: true
+  field_vih_top_banner: true
   langcode: true
