--- a/config/sync/field.field.paragraph.vih_single_class_group.field_vih_scg_group_title.yml
+++ b/config/sync/field.field.paragraph.vih_single_class_group.field_vih_scg_group_title.yml
@@ -12,7 +12,7 @@ bundle: vih_single_class_group
 label: 'Navn på gruppe'
 description: ''
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings: {  }
