--- a/config/sync/field.field.taxonomy_term.vih_class.field_vih_paragraphs.yml
+++ b/config/sync/field.field.taxonomy_term.vih_class.field_vih_paragraphs.yml
@@ -31,7 +31,7 @@ bundle: vih_class
 label: Sektioner
 description: ''
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
