--- a/config/sync/field.field.node.vih_long_cource.field_vih_course_heading.yml
+++ b/config/sync/field.field.node.vih_long_cource.field_vih_course_heading.yml
@@ -12,7 +12,7 @@ bundle: vih_long_cource
 label: Overskrift
 description: ''
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings: {  }
