--- a/config/sync/field.field.paragraph.vih_course_slot.field_vih_cs_title.yml
+++ b/config/sync/field.field.paragraph.vih_course_slot.field_vih_cs_title.yml
@@ -12,7 +12,7 @@ bundle: vih_course_slot
 label: Titel
 description: ''
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings: {  }
