--- a/config/sync/field.field.paragraph.vih_ordered_option.field_vih_oo_option_name.yml
+++ b/config/sync/field.field.paragraph.vih_ordered_option.field_vih_oo_option_name.yml
@@ -12,7 +12,7 @@ bundle: vih_ordered_option
 label: 'Option name'
 description: ''
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings: {  }
