--- a/config/sync/field.field.user.user.field_vih_user_kvalifikationer.yml
+++ b/config/sync/field.field.user.user.field_vih_user_kvalifikationer.yml
@@ -13,7 +13,7 @@ bundle: user
 label: Kvalifikationer
 description: ''
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings: {  }
